apps/bazarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  namespace: media
  labels:
    app: bazarr
  name: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bazarr
    spec:
      containers:
        - image: lscr.io/linuxserver/bazarr:latest
          name: bazarr
          ports:
            - containerPort: 6767
          volumeMounts:
            - name: bazarr-vol
              mountPath: "/config"
            - name: media-vol
              mountPath: "/media"
          resources: {}
      securityContext:
        runAsUser: 3000
        runAsGroup: 3000
        fsGroup: 3000
      volumes:
        - name: bazarr-vol
          persistentVolumeClaim:
            claimName: bazarr-pvc
        - name: media-vol
          persistentVolumeClaim:
            claimName: media-pvc
status: {}
